petstorevet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petstorevet
  labels:
    app: petstorevet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petstorevet
  template:
    metadata:
      labels:
        app: petstorevet
    spec:
      containers:
        - name: petstorevet
          image: leopedroza98/petstorevet:latest
