petstorevet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petstorevet

spec:
  selector:
    app: petstorevet

  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
