petstorevet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: petstorevet

spec:
  ingressClassName: kong
  rules:
    - host: vet.bloco.live
      http:
        paths:
          - backend:
              service:
                name: petstorevet
                port:
                  number: 7152
            path: /
            pathType: Prefix
